--- a/src/main/resources/templates/result-request-scope.html
+++ b/src/main/resources/templates/result-request-scope.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>aiu</h1>
+    入力された名前は「<span th:text="${hogehoge}">dummy</span>」です。
 </body>
 </html>
