--- a/src/main/resources/templates/result-total-scope.html
+++ b/src/main/resources/templates/result-total-scope.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>aiu</h1>
+    入力された数字は「<span th:text="${num1}">一</span>です。」
+    入力された数字は「<span th:text="${num2}">一</span>です。」
 </body>
 </html>
