--- a/src/main/resources/templates/result-scope-total-form.html
+++ b/src/main/resources/templates/result-scope-total-form.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>aiu</h1>
+    <form action="result-total-scope.html" th:action="@{/total-scope/input-num}" method="post">
+        <input type="text" name="num1">
+        <input type="text" name="num2"><br>
+        <button>送信</button>
+    </form> 
 </body>
 </html>
