--- a/src/main/resources/templates/mail-result.html
+++ b/src/main/resources/templates/mail-result.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -6,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    入力された数字は「<span th:text="${number1}">一</span>です。」
-    入力された数字は「<span th:text="${number2}">一</span>です。」
+    <span th:text="${session.mail}">dummy1</span>
+    <span th:text="${session.pass}">dummy2</span>
 </body>
 </html>
