--- a/src/main/resources/templates/session-scope-form.html
+++ b/src/main/resources/templates/session-scope-form.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="result-total-scope.html" th:action="@{/total-scope/input-num}" method="post">
-        <input type="text" name="num1">
-        <input type="text" name="num2"><br>
+    名前を入力してください
+    <form action="result-session-scope1.html" th:action="@{session-scope/input-name}" method="post">
+        <input type="text" name="name">
         <button>送信</button>
-    </form> 
+    </form>
 </body>
 </html>
