--- a/src/main/resources/templates/result-session-scope2.html
+++ b/src/main/resources/templates/result-session-scope2.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    入力された数字は「<span th:text="${number1}">一</span>です。」
-    入力された数字は「<span th:text="${number2}">一</span>です。」
+    入力された名前は「<span th:text="${session.name}">dummy</span>」 です。
+    <a th:href="@{/session-scope/to-page3}">to page3</a>
+    
 </body>
 </html>
