--- a/src/main/resources/templates/result-session-scope3.html
+++ b/src/main/resources/templates/result-session-scope3.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    入力された数字は「<span th:text="${number1}">一</span>です。」
-    入力された数字は「<span th:text="${number2}">一</span>です。」
+    入力された名前は「<span th:text="${session.name}">dummy</span>」です。
 </body>
 </html>
